Changed git properties filname format back to default

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,9 @@ info.app.parent.description=@project.parent.description@
 info.app.parent.artifactId=@project.parent.artifactId@
 info.app.parent.groupId=@project.parent.groupId@
 info.app.parent.version=@project.parent.version@
+
+# PROJECT INFORMATION (ProjectInfoProperties)
+spring.info.git.location=classpath:git.json
+
+# INFO CONTRIBUTORS (InfoContributorProperties)
+management.info.git.mode=full
