Added thymeleaf and spring security support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,15 @@ info.app.parent.groupId=@project.parent.groupId@
 info.app.parent.version=@project.parent.version@
 
 # PROJECT INFORMATION (ProjectInfoProperties)
-spring.info.git.location=classpath:git.json
+#spring.info.git.location=classpath:git.properties
 
 # INFO CONTRIBUTORS (InfoContributorProperties)
 management.info.git.mode=full
+
+# SECURITY (SecurityProperties)
+spring.security.user.name=admin
+spring.security.user.password=MyStore@789
+spring.security.user.roles=ACTUATOR
+
+# ENDPOINTS WEB CONFIGURATION (WebEndpointProperties)
+management.endpoints.web.base-path=/manage
