Minor changes to pom and error page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,3 +45,5 @@ spring.security.user.roles=ACTUATOR
 
 # ENDPOINTS WEB CONFIGURATION (WebEndpointProperties)
 management.endpoints.web.base-path=/manage
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=when-authorized
