--- a/pom.xml
+++ b/pom.xml
@@ -95,8 +95,8 @@
 			    <configuration>
 			        <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
 			        <prefix>git</prefix>
-			        <dateFormat>yyyy-MM-dd'T'HH:mm:ssZ</dateFormat>
-			        <dateFormatTimeZone>${user.timezone}</dateFormatTimeZone>
+			        <!-- <dateFormat>yyyy-MM-dd'T'HH:mm:ssZ</dateFormat>
+			        <dateFormatTimeZone>${user.timezone}</dateFormatTimeZone> -->
 			        <verbose>false</verbose>
 			        <generateGitPropertiesFile>true</generateGitPropertiesFile>
 			        <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
